--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,3 +16,9 @@ data:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+job:
+  jobs:
+    - name: one
+      schedule: '@every 1s'
+#    - name: two
+#      schedule: '@every 3s'
